# 2ndImpl

./: CMakeLists.txt  adaline.cpp  perceptron.cpp
